[package]
name = "harbor-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "harbor_core"
doctest = false

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
bcs = { workspace = true }
bytes = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
fastcrypto.workspace = true
seal-sdk-rs = { workspace = true }

sui-crypto = { workspace = true }
sui-rpc = { workspace = true }
sui-sdk-types = { workspace = true }
sui-transaction-builder = { workspace = true }
futures = "0.3.32"
hex = "0.4.3"
sui_sdk = { workspace = true }
async-trait = "0.1.89"
